<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout_view_3"
        android:layout_width="match_parent"
        android:background="@android:color/background_light"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginStart="50dp"
            android:text="@string/text"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:layout_marginLeft="50dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:hint="@string/fam"
            android:textSize="25sp"
            android:inputType="textCapWords"
            android:autofillHints="" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:autofillHints=""
            android:hint="@string/name"
            android:inputType="textCapWords"
            android:textSize="25sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/middle_name"
            android:textSize="25sp"
            android:inputType="textCapWords"
            android:autofillHints="" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/group"
            android:textSize="25sp"
            android:inputType="number"
            android:autofillHints="" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:hint="@string/faculty"
            android:textSize="20sp"
            android:inputType="text"
            android:autofillHints="" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textStyle="bold"
            android:layout_marginTop="70dp"
            android:onClick="onClickSave"
            android:background="#3F51B5" />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="#3F51B5"
            android:onClick="onClickBack"
            android:text="@string/button_back"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>