<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/main_layout"
        android:background="@android:color/primary_text_dark_nodisable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="1">

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/text2"
            android:layout_marginTop="60dp"
            android:textColor="@android:color/black"
            android:textSize="25sp"/>

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text2"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="140dp"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="30dp"
            android:paddingLeft="70dp"
            android:paddingTop="20dp"
            android:paddingRight="70dp"
            android:paddingBottom="20dp"
            android:text="@string/_1"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text2"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="180dp"
            android:layout_marginEnd="115dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:paddingLeft="70dp"
            android:paddingTop="20dp"
            android:paddingRight="70dp"
            android:paddingBottom="20dp"
            android:text="@string/_2"
            android:textSize="20sp" />


        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="430dp"
            android:layout_marginEnd="115dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:paddingLeft="70dp"
            android:paddingTop="20dp"
            android:paddingRight="70dp"
            android:paddingBottom="20dp"
            android:text="@string/_3"
            android:textSize="20sp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>